GNOME Bugzilla – Bug 748022
audiofx: fix typos in example pipelines
Last modified: 2015-04-17 08:56:36 UTC
Fix typos in example pipelines for audiodynamic, audioamplify "ratio" instead of "rate" and "clipping-method" instead of "method"
Created attachment 301779 [details] [review] fix typos Fixed typos.
Thanks: commit fd6a5a5d90dc5cc1754fbe0ee14f6acbe06ff7e0 Author: Ravi Kiran K N <ravi.kiran@samsung.com> Date: Fri Apr 17 11:54:23 2015 +0530 audiofx: fix typo in example pipelines Fix typo in example pipelines https://bugzilla.gnome.org/show_bug.cgi?id=748022