audiofx: fix typo in example pipelines

Fix typo in example pipelines

https://bugzilla.gnome.org/show_bug.cgi?id=748022